--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -7,8 +7,30 @@ on:
         required: false
         type: boolean
         default: false
+    secrets:
+      env_vars:
+        required: true
 
 jobs:
+  parse-credentials:
+    runs-on: ubuntu-latest
+    env:
+      env_vars: ${{ secrets.env_vars }}
+    steps:
+      - name: Decode credentials as env vars
+        run: |
+          for i in $env_vars; do
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=} | base64 -di | base64 -di)
+            echo ::add-mask::${i#*=}
+            printf '%s\n' "$i" >> $GITHUB_ENV
+          done
+      - name: Validate credentials
+        run: |
+          # Secrets are now available as masked env vars
+          echo $CREDENTIAL1
+          echo $CREDENTIAL2
+          echo $CREDENTIAL3
+
   Linux:
     runs-on: ubuntu-latest
     timeout-minutes: 30
