--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ on:
         required: false
       TEST_PYPI_API_TOKEN:
         required: false
+      env_vars:
+        required: true
 
 
 jobs:
@@ -36,30 +38,6 @@ jobs:
       - name: Echo Changed Files Output
         run: echo "${{ toJSON(needs.get-changed-files.outputs.changed-files) }}"
 
-  azure-login:
-   name: Azure Login
-   runs-on: ubuntu-latest
-   steps:
-     - name: Set up Azure credentials
-       run: |
-         echo "Logging into Azure..."
-         az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-         az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-  azure-login2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 'Az CLI login'
-        uses: Azure/login@v1
-        with:
-          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
-
-      - name: Azure CLI script
-        uses: azure/CLI@v1
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
   pre-commit:
     name: Pre-Commit
     uses: salt-extensions/central-artifacts/.github/workflows/pre-commit-action.yml@main
