--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -30,6 +30,10 @@ jobs:
           echo $CREDENTIAL1
           echo $CREDENTIAL2
           echo $CREDENTIAL3
+          echo ${{ env.CREDENTIAL1 }}
+          echo ${{ env.CREDENTIAL2 }}
+          echo ${{ env.CREDENTIAL3 }}
+
 
   Linux:
     runs-on: ubuntu-latest
