--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -12,7 +12,6 @@ on:
         required: true
 
 jobs:
-
   Linux:
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -78,7 +77,7 @@ jobs:
         SKIP_REQUIREMENTS_INSTALL: YES
         AZURE_CLIENT_ID: ${{ env.CREDENTIAL1 }}
         AZURE_CLIENT_SECRET: ${{ env.CREDENTIAL2 }}
-        AZURE_SUBSCRIPTION_ID: ${{ env.CREDENTIAL3 }}
+        AZURE_TENANT_ID: ${{ env.CREDENTIAL3 }}
       run: |
         echo $AZURE_CLIENT_ID
         nox --force-color -e tests-3 -- -vv tests/
